#******************************************************************************
#*Copyright (C) 2023 by Salvador Z                                            *
#*                                                                            *
#*****************************************************************************/
#*
#*@author Salvador Z
#*@brief CMakeLists file to add target for the library
#*
#*****************************************************************************/
add_library(hash STATIC HashMap.cpp)