#******************************************************************************
#*Copyright (C) 2023 by Salvador Z                                            *
#*                                                                            *
#*****************************************************************************/
#*
#*@author Salvador Z
#*@brief CMakeLists file to add target for the library
#*
#*****************************************************************************/
add_library(Hash STATIC HashMap.cpp)
add_library(Queue STATIC Queue.cpp)